# shift-scheduler

./: .env  .gitignore  .gitlab-ci.yml  AGENTS.md  API.md  FORMULAS.md  README.md  calendar.json  config.json  config.py  cost_engine.py  domain.py  ics_exporter.py  input.json  io_handler.py  main.py  pyproject.toml  release.sh  scheduler.py  shifts.json
Input/: calendar.json  config.json  people.json  shifts.json
src/chejooli_core/: __init__.py  api.py  cli.py  cost_engine.py  domain.py  ics_exporter.py  json_io.py  models.py  schedule_json.py  scheduler.py
