[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "chejooli-core"
version = "0.1.0"
description = "Constraint-based shift scheduling engine"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Sobhan Aghasizadeh" }]
dependencies = ["python-dotenv>=1.0"]

[project.scripts]
chejooli = "chejooli_core.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
